tests/sksl/errors/BadModifiers.glsl
### Compilation failed:

error: 1: 'const' is not permitted here
error: 1: 'in' is not permitted here
error: 1: 'out' is not permitted here
error: 1: 'uniform' is not permitted here
error: 1: 'flat' is not permitted here
error: 1: 'noperspective' is not permitted here
error: 1: 'varying' is not permitted here
error: 3: 'uniform' is not permitted here
error: 3: 'flat' is not permitted here
error: 3: 'noperspective' is not permitted here
error: 3: 'sk_has_side_effects' is not permitted here
error: 3: 'varying' is not permitted here
error: 3: 'inline' is not permitted here
error: 5: 'in uniform' variables only permitted within fragment processors
error: 5: 'varying' is only permitted in runtime effects
error: 5: 'sk_has_side_effects' is not permitted here
error: 5: 'inline' is not permitted here
error: 5: 'const' variables must be initialized
18 errors
